--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MuseosJorgePrieto</string>
+    <string name="created1">Created By</string>
+    <string name="created2">Jorge Prieto</string>
+    <string name="descriptionLogo">logo of the musseum app</string>
 </resources>
