--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="name">Name</string>
-    <string name="rgTextForImage">Add an image by pressing on the image</string>
+    <string name="rgTextForImage">Add a photo by pressing on the image</string>
+    <string name="alertTextForRegister">Error, operation failed</string>
+    <string name="alertTextForLogin">Error, wrong email or password</string>
 </resources>
