--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,5 @@
     <string name="map">Map of Museums</string>
     <string name="tickets">Buy tickets</string>
     <string name="add_photo">Add photo</string>
-    <string name="scanner">Scan Now</string>
+    <string name="scanner">Scan The Ticket</string>
 </resources>
